Make navigation menu fixed so that all of its elements will be visible at all times

--- a/style.css
+++ b/style.css
@@ -17,18 +17,23 @@
 
 * {
   margin: 0;
-    padding: 0
+  padding: 0
 }
 
 *, *::before, *::after {
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100vh;
+  max-height: 100vh;
+}
+
 body {
   line-height: 1.5;
   color: white;
-  font-family: "Urbanist";
   /* placeholder color for text visibility in initial page setup */
+  font-family: "Urbanist";
 }
 
 img, picture, video, canvas, svg {
@@ -55,9 +60,6 @@ h1, h2, h3, h4, h5, h6 {
 .content-holder {
   display: grid;
   grid-template-columns: 1fr 4fr;
-
-  height: 100vh;
-  width: 100vw;
 }
 
 .nav-main {
@@ -76,6 +78,8 @@ h1, h2, h3, h4, h5, h6 {
   height: fit-content;
   display: grid;
   gap: 5rem;
+
+  position: fixed;
 }
 
 .nav-main > div > div{
